# telemetry-dashboard

./: .gitignore  12:46:13.045 Running build in Washington  RIPPLE_MAP.md  bootstrap.md  debug_hook_payload.json  package-lock.json  package.json  pending_lessons.json  vercel.json
.agents/: .mcp_verification_cache  debug_hook_payload.json  hooks.json  lessons_context.md  system_status_report.md
.agents/agents/: exit_agent.txt  faq_data.json  faq_receptionist.txt  receptionist.txt  router.txt  wismo_receptionist.txt
.agents/docs/: DAILY_WORKFLOW.md  DOMAIN_MAP.md  FINDINGS.md  RECEPTIONIST_SOP.md  RIPPLE_MAP.md  dashboard.md
.agents/hooks/: .debug_prompt_payload.json  .walkthrough_hash  alert_handler.py  archive_lessons.py  flush_pending_lessons.py  lint_workspace.py  load_lessons_context.py  markdown-validate.sh  mcp_hygiene.py  python-validate.sh  safety_gate.py  sync_context.py  sync_implicit_pb.py  update_dashboard.py
.agents/rules/: AGENTS.md  GEMINI.md  auditor.md  builder.md  guardrails.md  librarian.md  orchestrator.md  researcher.md  sre.md  workspace_context.md
.agents/scripts/: sync_ces_agents.py  (+1 more)
.agents/skills/toon-mcp/mcp-server-toon/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.agents/skills/toon-mcp/mcp-server-toon/src/: __init__.py  config.py  patterns.py  server.py  test_refactor.py  toon_converter.py
.agents/skills/toon-mcp/mcp-server-toon/tests/: test_conversions.py  test_depth.py  test_mcp_integration.py
app/: globals.css  layout.tsx  page.tsx
lib/: competitorData.ts  priceFilters.ts  ringcentral.ts
production_artifacts/: agent_live.md  walkthrough.md
scratch/: backfill_history_91_180.js  check_180_days.js
scripts/: backfill-telemetry.js  test-filters.js
(+142 files in other folders)
